@@ -44,6 +44,8 @@ FIXES
 
  * Classes tab notes doesn't display data
 
+ * Error on runtime filter apply on a process
+
 
 
 
